--- a/src/main/webapp/statics/css/appeditor/m/style.css
+++ b/src/main/webapp/statics/css/appeditor/m/style.css
@@ -35,6 +35,14 @@ a,a:hover{text-decoration: none;display: block;}
 .pop_search{width:94%;margin:2% auto;overflow:hidden;}
 .pop_search i{/*margin-top:2%;*/float:right;display:block;width:1.5rem;height:1.5rem;background:url(/university/statics/images/appeditor/m/pop_se.png)no-repeat center center;background-color:#8f5dbf;border-radius:5px;background-size:70%;}
 .pop_chose{width:94%;margin:4% auto;font-size:0.6rem;color:#333;border-bottom:1px solid #ddd;padding-bottom: 2%;}
+.country_pop{display:block;width:100%;height:auto;background-color:#fff;border-radius:0.3rem;margin:3% auto;}
+.chose_list{width:94%;margin:2% auto;font-size:0.54rem;color:#666;overflow:hidden;}
+.pop_tit{width:94%;height:auto;margin:2% auto;font-size:0.6rem;color:#8f5dbf;overflow:hidden;}
+.topbar_prov{position: relative;width:100%;height:2.2rem;background:url(/university/statics/images/appeditor/m/top_bar.png)no-repeat 0 0;background-size:100%;font-size:0.6rem;line-height:2.2rem;text-align: center;color:#2d5c9f;}
+.topbar_prov i{display: block;height:2.2rem;width:10%;position:absolute;background:url(/university/statics/images/appeditor/m/return.png)no-repeat center center;background-size:30%;left: 0;top:0;}
+
+
+
 
 .drop{z-index:1000;display: block;height:2rem;width:2rem;background-color:#fff;position:fixed;top:0;right:0;border-left:1px solid #ddd;}
 .top-nav em{display: block;height:2rem;width:100%;background:url(../images/toggle.png)no-repeat center center;background-size:45%;}
