--- a/src/main/webapp/statics/css/appeditor/m/style.css
+++ b/src/main/webapp/statics/css/appeditor/m/style.css
@@ -40,8 +40,8 @@ a,a:hover{text-decoration: none;display: block;}
 .pop_tit{width:94%;height:auto;margin:2% auto;font-size:0.6rem;color:#8f5dbf;overflow:hidden;}
 .topbar_prov{position: relative;width:100%;height:2.2rem;background:url(/university/statics/images/appeditor/m/top_bar.png)no-repeat 0 0;background-size:100%;font-size:0.6rem;line-height:2.2rem;text-align: center;color:#2d5c9f;}
 .topbar_prov i{display: block;height:2.2rem;width:10%;position:absolute;background:url(/university/statics/images/appeditor/m/return.png)no-repeat center center;background-size:30%;left: 0;top:0;}
-
-
+.topbar_sch{position: relative;width:100%;height:2.2rem;background:url(/university/statics/images/appeditor/m/top_bar.png)no-repeat 0 0;background-size:100%;font-size:0.6rem;line-height:2.2rem;text-align: center;color:#2d5c9f;}
+.login_btn{margin:4% auto;width:100%;height:2rem;background-color:#8f5dbf;color:#fff;font-size:0.6rem;line-height:2rem;text-align:center;border-radius:0.3rem;}
 
 
 .drop{z-index:1000;display: block;height:2rem;width:2rem;background-color:#fff;position:fixed;top:0;right:0;border-left:1px solid #ddd;}
@@ -56,7 +56,7 @@ a,a:hover{text-decoration: none;display: block;}
 .btn_right{vertical-align:middle;width:47%;float:right;font-size:0.56rem;margin-right:2%;background-color:#8f5dbf;padding:8px 0;text-align:center;color:#fff;border-radius:5px;}
 .btn img{display:inline-block;vertical-align:middle;max-width:10%;height: auto;width: 100%;}
 /*index2*/
-.item{width:100%;height:auto;margin:5px auto 10px;}
+.item{width:94%;height:auto;margin:5px auto 10px;}
 .item p{color: #333;font-size: 0.66rem;margin-bottom:10px;}
 .item span{color:#8f5dbf;font-size: 0.6rem;}
 /*.photo{display:inline-block;}*/
@@ -219,7 +219,7 @@ all_style{width:94%;margin:0 auto;}
 .chose_on{color:#8f5dbf;}
 .pop_others{display:none;}
 .pop_chose{width:94%;margin:4% auto;font-size:0.6rem;color:#333;border-bottom:1px solid #ddd;padding-bottom: 2%;}
-.country_list{width:100%;margin:2% auto;font-size:0.54rem;color:#666;height:190px;overflow-y:auto;}
+.country_list{width:100%;margin:2% auto;font-size:0.54rem;color:#666;height:260px;overflow-y:auto;}
 .country_list li{padding:2% 0 2% 5%;}
 .invest{width:40%!important;border:1px solid #ddd!important;border-radius:5px;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;margin-left:5px;margin-right:15px;}
 .overhidden label{line-height:1.5rem;margin-left:5px;font-size:0.58rem;color:#999;}
