--- a/src/main/webapp/statics/css/appeditor/m/style.css
+++ b/src/main/webapp/statics/css/appeditor/m/style.css
@@ -84,9 +84,8 @@ input[type="text"],input[type="password"]:focus{border:none;}
 .emergency{color:#8f5dbf !important;}
 .btn1{width:100%;height:auto;margin:10px auto 0;overflow:hidden;background-color:#fff;padding:10px 0;}
 .btn1 img{display:inline-block;vertical-align:middle;max-width:15%;height: auto;width: 100%;}
-.btn1 li{vertical-align: middle;width:31%;float:left;font-size:0.56rem;margin:0 1.5% 0 2%;background-color:#8f5dbf;padding:8px 0;text-align:center;color:#fff;border-radius:5px;}
-.btn1 li:nth-child(2){margin-left: 0;background-color:#ff7b05;}
-.btn1 li:last-child{margin:0;}
+.btn1 li{vertical-align: middle;width:31%;float:left;font-size:0.56rem;margin:0 0% 0 1.75%;background-color:#8f5dbf;padding:8px 0;text-align:center;color:#fff;border-radius:5px;}
+.btn1 li:nth-child(2){background-color:#ff7b05;}
 
 /*index3*/
 input[type="checkbox"], input[type="radio"] {
