修改手机报名表样式

--- a/src/main/webapp/statics/css/appeditor/m/style.css
+++ b/src/main/webapp/statics/css/appeditor/m/style.css
@@ -28,6 +28,10 @@ a,a:hover{text-decoration: none;display: block;}
 	border-bottom: dashed 1px #dadbdd;
 	padding-bottom:15px;
 }
+.input-list{
+	margin-top:15px;
+	white-space: nowrap;
+}
 .cd-top.cd-fade-out {
   opacity:1;
 }
