--- a/src/main/webapp/statics/js/lib/jqueryMobile/jquery.mobile-sem.css
+++ b/src/main/webapp/statics/js/lib/jqueryMobile/jquery.mobile-sem.css
@@ -942,6 +942,7 @@ html body .ui-group-theme-a .ui-bar-inherit {
 	color: 					#333 /*{a-bar-color}*/;
 	text-shadow: 0 /*{a-bar-shadow-x}*/ 1px /*{a-bar-shadow-y}*/ 0 /*{a-bar-shadow-radius}*/ 	#eee /*{a-bar-shadow-color}*/;
 	font-weight: bold;
+	width:300px;
 }
 .ui-bar-a {
 	border-width: 1px;
