--- a/src/main/webapp/statics/js/onlineSurvey/css/index.css
+++ b/src/main/webapp/statics/js/onlineSurvey/css/index.css
@@ -140,7 +140,7 @@
 }
 .maincon-page{
 	text-align:center;
-	padding-bottom:60px;
+	padding-bottom:20px;
 }
 .pagebtn1, .pagebtn2{
 	float:left;
@@ -363,4 +363,9 @@ table.MultiTextBox td.Label{
 	max-height:280px;
 	overflow-y:auto;
 	overflow-x:hidden;
+}
+.submitdesc{
+	text-align: center;
+    margin: 5px auto;
+    color: #ff0000;
 }
