--- a/src/main/webapp/statics/js/onlineSurvey/css/m/index.css
+++ b/src/main/webapp/statics/js/onlineSurvey/css/m/index.css
@@ -165,7 +165,7 @@
 }
 .maincon-page{
 	text-align:center;
-	padding-bottom:40px;
+	padding-bottom:20px;
 }
 .pagebtn1, .pagebtn2{
 	float:left;
@@ -364,4 +364,9 @@
 	max-height:280px;
 	overflow-y:auto;
 	overflow-x:hidden;
+}
+.submitdesc{
+	text-align: center;
+    margin: 5px auto;
+    color: #ff0000;
 }
