--- a/src/main/webapp/statics/css/appeditor/m/style.css
+++ b/src/main/webapp/statics/css/appeditor/m/style.css
@@ -61,7 +61,7 @@ a,a:hover{text-decoration: none;display: block;}
 .login_btn{margin:4% auto;width:100%;height:2rem;background-color:#8f5dbf;color:#fff;font-size:0.6rem;line-height:2rem;text-align:center;border-radius:0.3rem;}
 
 
-.drop{z-index:1000;display: block;height:2rem;width:2rem;background-color:#fff;position:fixed;top:0;right:0;border-left:1px solid #ddd;}
+.drop{border-bottom: 1px solid #ddd;z-index:1000;display: block;height:2rem;width:2rem;background-color:#fff;position:fixed;top:0;right:0;border-left:1px solid #ddd;}
 .top-nav em{display: block;height:2rem;width:100%;background:url(../../../images/appeditor/m/toggle.png)no-repeat center center;background-size:45%;}
 .se_tit{color:#8f5dbf;font-size:0.64rem;border-left:2px solid #8f5dbf;width:94%;margin:2.6rem auto 0.6rem;line-height:0.6rem;padding-left:5px;}
 .index_body{width:100%;margin:0 auto;background-color:#fff;padding-bottom:20px;}
@@ -124,8 +124,8 @@ input[type="checkbox"], input[type="radio"] {
 .tjx  li label{display:inline-block;font-size:0.58rem;line-height:0.7rem;color:#666;vertical-align: middle;}
 .text2{vertical-align: middle;border-radius:5px;display:inline-block;box-sizing:border-box;width:80%!important;border:1px solid #ddd!important;}
 textarea{border:none;font-size:0.6rem;line-height:1rem;width:100%;background-color:transparent;min-height:4rem;text-indent: 8px;padding-top: 3px; color: #666;}
-.next_record{width:100%;border-top:10px solid #f1f1f1;}
-.btn_delete{display:inline-block;vertical-align: middle;margin-top: 10px;padding:8px 10px;text-align:center;font-size:0.6rem;color:#aa1133;border:1px dashed #aa1133;background-color:#ffe5eb;float: right;}
+.next_record{width:100%;}
+.btn_delete{display:inline-block;vertical-align: middle;margin-top: -6px;padding:8px 10px;text-align:center;font-size:0.6rem;color:#aa1133;border:1px dashed #aa1133;background-color:#ffe5eb;float: right;}
 .btn_delete img{display:inline-block;vertical-align: middle;margin-left:5px;max-width:20%;height: auto;width: 100%;}
 .add_next{display:inline-block;vertical-align: middle;margin-top: 10px;padding:8px 10px;text-align:center;font-size:0.6rem;color:#e06a00;border:1px dashed #e06a00;background-color:#ffead8;float: right;}
 .add_save{margin-right:10px;display:inline-block;vertical-align: middle;margin-top: 10px;padding:8px 10px;text-align:center;font-size:0.6rem;color:#2ca01c;border:1px dashed #2ca01c;background-color:#defeda;float: right;}
@@ -173,6 +173,7 @@ select{border:none;background-color:transparent;width:100%;height:1.5rem;font-si
 .top-nav{
   height:2rem;
   /*border-bottom: 1px solid #dddddd;*/
+  border-bottom: 1px solid #ddd;
   position: relative;
   margin-bottom: 1rem;
   background: #fff;
