--- a/src/main/webapp/statics/css/appeditor/m/style.css
+++ b/src/main/webapp/statics/css/appeditor/m/style.css
@@ -130,7 +130,7 @@ textarea{border:none;font-size:0.6rem;line-height:1rem;width:100%;background-col
 .add_next{display:inline-block;vertical-align: middle;margin-top: 10px;padding:8px 10px;text-align:center;font-size:0.6rem;color:#e06a00;border:1px dashed #e06a00;background-color:#ffead8;float: right;}
 .add_save{margin-right:10px;display:inline-block;vertical-align: middle;margin-top: 10px;padding:8px 10px;text-align:center;font-size:0.6rem;color:#2ca01c;border:1px dashed #2ca01c;background-color:#defeda;float: right;}
 
-select{border:none;background-color:transparent;width:100%;height:1.5rem;font-size:0.66rem;color:#666;line-height:1.5rem;text-indent:4px;}
+select{border:none;background-color:transparent;width:100%;height:1.5rem;font-size:0.66rem;color:#666;line-height:1.5rem;text-indent:4px;background: url(../../../images/appeditor/m/select.png) no-repeat scroll right center transparent;}
 .shuom a{display:inline-block;color:#ff7b05;}
 
 .tips{width:100%;height:auto;margin-bottom:5px;}
