--- a/src/main/webapp/statics/css/website/siteSet.css
+++ b/src/main/webapp/statics/css/website/siteSet.css
@@ -255,13 +255,14 @@
 }
 .thumb-wrap-title{
 	position: absolute;
-    max-height: 34px;
-    bottom: 3px;
-    padding: 0px 4px;
+	width:100%;
+    max-height: 39px;
+    bottom: 0px;
+    padding: 3px 4px;
     overflow: hidden;
     margin: 0 0px;
     color: #fff;
-    background: rgba(0,0,0,0.4);
+    background: rgba(0,0,0,0.5);
     font-size: 12px;
 }
 
