--- a/src/main/webapp/statics/css/kitchensink/theme-tranzvision/resources/KitchenSink-all_02.css
+++ b/src/main/webapp/statics/css/kitchensink/theme-tranzvision/resources/KitchenSink-all_02.css
@@ -53,6 +53,7 @@
 .application_view_list{background: url(images/icons/fam/application_view_list.png) no-repeat center center}
 .details{background: url(images/icons/toolbar/details.png) no-repeat center center}
 .export{background: url(images/icons/toolbar/export.png) no-repeat center center}
+.qrcode{background:url(images/icons/toolbar/qrcode.png) no-repeat center center}
 
 /*lack*/
 .sync{background: url(images/icons/toolbar/sync.png) no-repeat center center}
