--- a/src/main/webapp/statics/css/website/m/css/dialog.css
+++ b/src/main/webapp/statics/css/website/m/css/dialog.css
@@ -146,7 +146,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  color:#8f5dbf;
+  color:#008043;
   border: none;
   outline: none;
   cursor: pointer;
