--- a/src/main/webapp/statics/css/website/m/css/date.css
+++ b/src/main/webapp/statics/css/website/m/css/date.css
@@ -1,4 +1,4 @@
-Ôªø.page {display: none;position: absolute;top: 0;left: 0;bottom: 0;right: 0;width: 100%;height: 100%;overflow: hidden;}
+.page {display: none;position: absolute;top: 0;left: 0;bottom: 0;right: 0;width: 100%;height: 100%;overflow: hidden;}
 #datescroll div{float: left;margin-top: 15px;}
 #datescroll_datetime div{float: left;padding-right: 22px;}
 #yearwrapper{position: absolute;left: 5%;top:45px;bottom: 60px;width:30%;}
@@ -7,7 +7,7 @@
 #Hourwrapper{position: absolute;left: 0;top:195px;bottom: 68px;width:80%;}
 #Minutewrapper{position: absolute;left: 26%;top:195px;bottom: 68px;width:80%;}
 #Secondwrapper{position: absolute;left: 50%;top:195px;bottom: 68px;width:80%;}
-/*Â¢ûÂä†ÊâãÊåáÊªëÂä®Ëß¶Êë∏Èù¢ÁßØ*/
+/*‘ˆº” ÷÷∏ª¨∂Ø¥•√˛√Êª˝*/
 #Hourwrapper ul li{color: #898989;font-size: 12px;}
 #Minutewrapper ul li{color: #898989;font-size: 12px;}
 #Secondwrapper ul li{color: #898989;font-size: 12px;}
@@ -23,14 +23,14 @@
 #dateheader{width: 100%;height: 50px;background: #79C12F;text-align: center;color: #fff;line-height: 50px;font-size: 20px;}
 #setcancle ul{text-align: center;line-height: 30px; margin:1px auto;font-size: 20px;}
 #setcancle ul li{border-radius:3px;float: left;width: 40%;height: 30px;list-style-type: none;font-family:'microsoft yahei';font-size:16px;}
-#dateconfirm{position: absolute;background:#8f5dbf;left:20px;color:#fff;}
+#dateconfirm{position: absolute;background:#008043;left:20px;color:#fff;}
 #datecancle{position: absolute;background:  #dcdddd;right:20px;width: 40%;color:#666;}
 #dateshadow{display: none;width: 100%; height: 100%; position: fixed; top: 0; left: 0; background-color: #000; opacity: 0.6; filter: alpha(opacity=60); -ms-filter: "alpha(opacity=60)"; z-index: 115;}
 #datePage{font-size: 22px; border-radius: 3px; position:fixed;top:110px;MARGIN-RIGHT: auto;vertical-align:middle;
 MARGIN-LEFT: auto;width: 80%;;height: 240px;background: #FFFFFF;z-index:9999999;}
-#datetitle{width: 100%;height:50px;background: #8f5dbf;text-align: center;color: #fff;line-height: 50px;font-size: 20px;font-family:'microsoft yahei';}
+#datetitle{width: 100%;height:50px;background: #008043;text-align: center;color: #fff;line-height: 50px;font-size: 20px;font-family:'microsoft yahei';}
 #datetitle h1{font-size: 0.56rem;}
-#datemark{font-size: 18px;left:5%;width: 90%;height: 35px;position:absolute;top:103px;border:1px solid #8f5dbf;}
+#datemark{font-size: 18px;left:5%;width: 90%;height: 35px;position:absolute;top:103px;border:1px solid #008043;}
 #timemark{font-size: 18px;left:5%;width: 90%;height: 20px;position:absolute;top:242px;background:#eee;border:1px solid #eee;}
 #datescroll{background: #F8F8F8;width:94%; margin:10px 3%;border: 1px solid #E0E0E0;border-radius: 4px;height: 120px;text-align: center;line-height: 40px;}
 #datescroll_datetime{display: none;background:#F8F8F8;width:94%; margin:10px 3%;margin-top: 10px;border: 1px solid #E0E0E0;border-radius: 4px;height: 120px;text-align: center;line-height: 40px;}
