--- a/src/main/webapp/statics/css/website/m/css/styleMEM.css
+++ b/src/main/webapp/statics/css/website/m/css/styleMEM.css
@@ -18,7 +18,7 @@ a,a:hover{text-decoration: none;display: block;}
 .viewport-adaptive{width: 100%;min-width: 320px;max-width:750px;margin: 0 auto;height: auto;}
 .viewport-adaptive2{width: 100%;min-width: 320px;max-width:750px;margin: 0 auto;height: auto;}
 .bg{width:100%;position:relative;background-color:#e4e4e4;height:auto;}
-.top{position:relative;background:url(../images/top_bg.png) top center no-repeat;width:100%;height:2rem;background-size:cover;}
+.top{position:relative;background:url(../images/top_membg.png) top center no-repeat;width:100%;height:2rem;background-size:cover;}
 .logout{display:block;position:absolute;font-size:0.5rem;color:#2d5c9f;bottom:0.4rem;right: 0.2rem;}
 /**激活按钮*/
  
