--- a/src/main/webapp/statics/css/appeditor/registration-Hpage.css
+++ b/src/main/webapp/statics/css/appeditor/registration-Hpage.css
@@ -81,16 +81,16 @@
     width: 10.5%;
     float: left;
     text-align: center;
-    background-color: #8f5dc0;
+    background-color: #1a8146;
     margin-right: 0.6875%;
     border-radius: 5px;
 }
 .regmain-menu ul li a{
-	color:#8f5dc0;
+	color:#1a8146;
 }
 /* 第一层菜单*/
 .regmain-menu ul li.menu-active-top{
-	background:#8f5dc0;
+	background:#1a8146;
 	color:#fff;
 	border-radius: 5px;
 	padding-left: 15px;
@@ -99,7 +99,7 @@
 	color:#fff;
 }
 .regmain-menu ul li.menu-active-top:hover{
-	background:#8f5dc0;
+	background:#1a8146;
 }
 /* 第二层默认菜单*/
 .regmain-menu ul li.menu-active{
@@ -189,7 +189,7 @@
 	line-height:46px;
 	margin-right:10px;
 	border-radius:5px;
-	background:#8f5dc0;
+	background:#1a8146;
 }
 .btn-pre{
 	text-align:center;
@@ -213,7 +213,7 @@
     vertical-align: middle;
 }
 .btn-action:hover{
-	background:#8f5dc0;
+	background:#1a8146;
 }
 .btn-save:hover{
 	background:#d96600;
