--- a/src/main/webapp/statics/js/onlineSurvey/css/m/index.css
+++ b/src/main/webapp/statics/js/onlineSurvey/css/m/index.css
@@ -1,4 +1,19 @@
+.starchoose{
+	height:20px;
+	padding:5px;
+}
 
+.starchoose-a{
+	float:left;
+	width:26px;
+	height:20px;
+	background:url(../images/star.png) 0 -20px no-repeat;
+}
+
+.starchoose-p{
+	margin-left:auto;
+	margin-right:auto;
+}
 .container{
 	/*max-width: 640px;*/
 	width:98%;
