--- a/src/main/webapp/statics/css/appeditor/m/styleSEM.css
+++ b/src/main/webapp/statics/css/appeditor/m/styleSEM.css
@@ -416,7 +416,7 @@ a, a:hover {
 	margin-bottom: 10px;
 }
 
-.item span {
+V {
 	color: #008043;
 	font-size: 0.6rem;
 }
@@ -436,11 +436,11 @@ a, a:hover {
 
 .sex li {
 	float: left;
-	width: 20%;
+	width: 28%;
 }
 
 .sex li:first-child {
-	margin-left: 30%;
+	margin-left: 5%;
 }
 
 .text-box {
@@ -781,7 +781,7 @@ select {
 
 .se_tit1 {
 	color: #008043;
-	font-size: 0.64rem;
+	font-size: 0.55rem;
 	border-left: 2px solid #008043;
 	width: 94%;
 	margin: 10px auto;
@@ -1313,4 +1313,19 @@ form {
 .boxSize3{
 	max-height: 288px;
 	height: 288px;
+}
+/*张超 时间：2019年12月26日12:37:13  备注手机版样式修改*/
+.zc_radio_p{
+	margin-bottom: 0;
+	display:inline-block;
+}
+.zc_radio_p span{
+	color: #b1193b;
+}
+.company li .zc_company_radio{
+	position: absolute;
+}
+.company li .zc_label{
+	width: 89%;
+	margin-left:1.5em;
 }
